Document PPDG/src/objects/HPPStatusTolerances__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AverageDuration__c</fullName>
        <label>Average Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPPStatus__c</fullName>
        <label>HPP Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargestDuration__c</fullName>
        <label>Largest Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximumStatusDuration__c</fullName>
        <label>Maximum Status Duration (Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SmallestDuration__c</fullName>
        <label>Smallest Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToleranceDuration__c</fullName>
        <label>Tolerance Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tolerance__c</fullName>
        <label>Tolerance %</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>HPP Status Tolerances</label>
    <listViews>
        <fullName>All_details</fullName>
        <columns>NAME</columns>
        <columns>AverageDuration__c</columns>
        <columns>SmallestDuration__c</columns>
        <columns>LargestDuration__c</columns>
        <columns>Tolerance__c</columns>
        <columns>ToleranceDuration__c</columns>
        <columns>HPPStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All details</label>
        <language>en_US</language>
    </listViews>
</CustomObject>